<resources>
    <string name="app_name">QSY</string>

    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <string name="nav_custom_executor">Rutina Personalizada</string>
    <string name="nav_player_executor">Rutina Aleatoria</string>
    <string name="nav_item_contacto">Contactanos</string>

    <string name="players_nodes_configuration">Cantidad y jugadores</string>
    <string name="amount_of_nodes">Cantidad de tortugas</string>
    <string name="other_configs">Otros</string>
    <string name="wait_for_all">Avanzar en equipo</string>
    <string name="routine_sound">Habilitar sonido</string>
    <string name="touch_node">Apagar tocando</string>
    <string name="stop_on_timeout">Frenar en paso incompleto</string>
    <string name="routine_duration">Duración de la rutina</string>
    <string name="routine_duration_title">Duración</string>
    <string name="step_times_configuration">Tiempo de pasos</string>
    <string name="amount_of_steps">Cantidad de pasos</string>
    <string name="node_delay">Tiempo de espera</string>
    <string name="step_timeout">Tiempo de expiración</string>
    <string name="start_routine">Empezar</string>
    <string name="delay_in_miliseconds">%1$d milisegundos</string>
    <string name="timeout_in_miliseconds">%1$d milisegundos</string>
    <string name="routine_duration_in_seconds">%1$d segundos</string>
    <string name="configure_players">Configurar jugadores</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="player_number">JUG. %1$d</string>
    <string name="button_off">OFF</string>
    <string name="button_on">ON</string>
    <string name="libterminal_connection">Tortugas</string>
    <string name="newNode">Se conectó el nodo %1$d</string>
    <string name="disconnectedNode">Se desconectó el nodo %1$d</string>
    <string name="action_nodes">TORTUGAS</string>
    <string name="routines_title">Rutinas</string>
    <string name="contact_us">Contacto</string>
    <string name="start_nodes_search">Buscar tortugas</string>
    <string name="libterminal_start">Buscar tortugas</string>
    <string name="routine_currently_executing">Hay una rutina corriendo</string>
    <string name="wrong_player_arguments">Configuración de rutina inválida</string>
    <string name="not_enough_connected_nodes">No hay suficientes nodos conectados</string>
    <string name="libterminal_not_up">La terminal no está corriendo</string>
    <string name="no_players_selected">Debe seleccionar al menos un jugador</string>
    <string name="execution_activity">Rutina en ejecución</string>
    <string name="ok">OK</string>
    <string name="routine_finished">Rutina terminada</string>
    <string name="status_running">Ejecutando</string>
    <string name="status_finished">Terminada</string>
    <string name="status_standby">Stand by</string>
    <string name="wrong_duration_or_steps">Los pasos o la duración deben ser mayor que cero</string>
    <string name="configuration">Configuración</string>

    <string name="execution_label">Ejecución</string>
    <string name="wait_for_all_description">Se espera a que se apaguen todas las tortugas.</string>
    <string name="stop_on_timeout_description">Cortar la ejecución cuando un jugador no apaga su tortuga.</string>
    <string name="sound_description">Hacer un sonido cuando se prende la tortuga.</string>
    <string name="touch_node_description">Apagar la tortuga únicamente cuando se la toca.</string>

    <string name="routine_title">Elegir rutina</string>
    <string name="routine_info">Información de la rutina</string>

    <plurals name="custom_number_of_nodes">
        <item quantity="one">Se utilizará una tortuga.</item>
        <item quantity="other">Se utilizarán %1$d tortugas.</item>
    </plurals>
    <plurals name="custom_number_of_steps">
        <item quantity="one">Se ejecutará un paso.</item>
        <item quantity="other">Se ejecutarán %1$d pasos.</item>
    </plurals>
    <plurals name="custom_total_time_out">
        <item quantity="one">La rutina durará 1 segundo.</item>
        <item quantity="other">La rutina durará %1$d segundos.</item>
    </plurals>
    <string name="failed_open_file">No se pudo obtener las rutinas.</string>
    <string name="time_not_configured">No se configuró el tiempo.</string>
    <string name="results">Resultados</string>
    <string name="debug">Debug</string>
    <string name="routine_log">Log de la rutina</string>
    <string name="turn_on">Prender</string>
    <string name="turn_off">Apagar</string>
    <string name="enable_sensor_description">Activa el sensor para poder apagar el paso.</string>
    <string name="enable_sensor">Habilitar sensor</string>
    <string name="nodes_search">Búsqueda de tortugas</string>
    <string name="searching_nodes">Conectado</string>
    <string name="start_search">Empezar</string>
    <string name="stop_search">Detener</string>

    <plurals name="amount_of_steps">
        <item quantity="one">Un paso</item>
        <item quantity="other">%1$d pasos</item>
    </plurals>
</resources>
