<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Ejecucion">
            <menu>
                <item
                    android:id="@+id/nav_custom_executor"
                    android:title="@string/nav_custom_executor"/>
                <item
                    android:id="@+id/nav_player_executor"
                    android:title="@string/nav_player_executor"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Conexión">
            <menu>
                <item
                    android:id="@+id/nav_libterminal"
                    android:title="@string/libterminal_connection" />
            </menu>
        </item>
    </group>

    <item android:title="Contacto">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_item_contacto"/>
        </menu>
    </item>

</menu>
