<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView
            android:id="@+id/amount_of_nodes_tv"
            style="@style/FormTitle"
            android:text="@string/players_nodes_configuration"/>

        <LinearLayout
            style="@style/FormFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                style="@style/FormButton"
                android:id="@+id/player_button_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_button_red"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/button_off"/>

            <Button
                style="@style/FormButton"
                android:id="@+id/player_button_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_button_green"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/button_off"/>

            <Button
                style="@style/FormButton"
                android:id="@+id/player_button_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_button_blue"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/button_off"/>

        </LinearLayout>

        <TableRow
            android:id="@+id/tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_amount_of_nodes"
                style="@style/FormFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/amount_of_nodes"/>

            <Spinner
                android:id="@+id/amount_of_nodes_spinner"
                style="@style/FormFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"/>

        </TableRow>

        <TextView
            android:id="@+id/duration_configs_tv"
            style="@style/FormTitle"
            android:text="@string/routine_duration_title"/>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <requestFocus/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/duration_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount_of_steps_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_of_steps"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/routine_duration_bt"
                style="@style/FormButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/routine_duration"/>

            <TextView
                style="@style/FormFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/routine_duration_tv"/>
        </LinearLayout>

        <TextView
            android:id="@+id/other_configs_tv"
            style="@style/FormTitle"
            android:text="@string/other_configs"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/wait_for_all_sc"
            style="@style/FormSwitchCompat"
            android:text="@string/wait_for_all"/>

        <View style="@style/FormDivider"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/stop_on_timeout_sc"
            style="@style/FormSwitchCompat"
            android:text="@string/stop_on_timeout"/>

        <View style="@style/FormDivider"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sound_sc"
            style="@style/FormSwitchCompat"
            android:text="@string/routine_sound"/>

        <View style="@style/FormDivider"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/touch_node_sc"
            style="@style/FormSwitchCompat"
            android:text="@string/touch_node"/>

        <View style="@style/FormDivider"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/FormButton"
                android:id="@+id/node_delay_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/node_delay"/>

            <TextView
                style="@style/FormFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/node_delay_tv" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/step_timeout_bt"
                style="@style/FormButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_timeout"/>

            <TextView
                style="@style/FormFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/step_timeout_tv" />

        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/start_routine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_routine"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
