<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/custom_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:id="@+id/custom_executor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choose_routine_tv"
            style="@style/FormTitle"
            android:text="@string/routine_title"/>

        <Spinner
            android:id="@+id/custom_routine_spinner"
            style="@style/FormFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"/>

        <LinearLayout
            android:id="@+id/routine_info_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/routine_info_tv"
                style="@style/FormTitle"
                android:text="@string/routine_info" />

            <TextView
                android:id="@+id/custom_number_of_nodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/custom_number_of_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/custom_total_time_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/start_custom_routine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_routine"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
