<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        style="@style/FormFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/FormButton"
            android:id="@+id/button_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/player_button_cyan"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/button_off"/>

        <Button
            style="@style/FormButton"
            android:id="@+id/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/player_button_green"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/button_off"/>

        <Button
            style="@style/FormButton"
            android:id="@+id/button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/player_button_red"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/button_off"/>

        <Button
            style="@style/FormButton"
            android:id="@+id/button_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/player_button_blue"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/button_off"/>

        <Button
            style="@style/FormButton"
            android:id="@+id/button_magenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/player_button_magenta"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/button_off"/>

    </LinearLayout>

    <TableRow
        android:id="@+id/tr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_amount_of_nodes"
            style="@style/FormFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Nodo: "/>

        <Spinner
            android:id="@+id/nodes_spinner"
            style="@style/FormFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawSelectorOnTop="true"/>

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/turn_node_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_off"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/send_packet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>